Pac4jModule: a way to omit /logout and /callback  - turn off by default or force them with Pac4jOptions  - fix #3328